--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ h1{
     font-size: 50px;
 }
 .color{
-    color: blue;
+    color: rgb(33, 33, 230);
 }
 section{
     display: flex;
@@ -33,3 +33,38 @@ section{
     border-image-slice: 1;
     padding-left: 3%;
 }
+.mission{
+    color: orangered;
+}
+.second-section{
+    text-align: center;
+    font-size: 25px;
+}
+.color-orange{
+    color: orangered;
+}
+.div-mission{
+    width: 250px;
+    background-image: linear-gradient(rgb(178, 222, 236), rgb(84, 84, 190));
+    
+    border: 1px solid blue;
+    border-radius: 10px;
+    padding: 5px 20px;
+    box-shadow: 4px 4px 15px gray;
+}
+.div-img img{
+    width: 90%;
+    padding: auto;
+}
+.all-mission{
+    background-image: linear-gradient(rgb(226, 128, 17))
+}
+.all-mission{
+    display: flex;
+    padding: 10px;
+    justify-content: space-around;
+}
+#red{
+    background-image: linear-gradient(rgb(192, 139, 41), rgb(177, 177, 44));
+}
+
