--- a/style.css
+++ b/style.css
@@ -44,12 +44,16 @@ section{
     color: orangered;
 }
 .div-mission{
-    width: 250px;
+    width: 50%;
+    margin: 50px;
+    margin-bottom: 2%;
+    margin-top: 2%;
     background-image: linear-gradient(rgb(178, 222, 236), rgb(84, 84, 190));
     
     border: 1px solid blue;
     border-radius: 10px;
-    padding: 5px 20px;
+    padding-left: 20px;
+    padding-right: 20px;
     box-shadow: 4px 4px 15px gray;
 }
 .div-img img{
@@ -67,4 +71,35 @@ section{
 #red{
     background-image: linear-gradient(rgb(192, 139, 41), rgb(177, 177, 44));
 }
-
+.img-src{
+    width: 40%;
+}
+.important-page{
+    display: flex;
+    margin: 5%;
+}
+.my-name{
+    width: 50%;
+}
+.my-name img{
+    width: 70%;
+    margin-left: 20%;
+}
+.middle{
+    text-align: center;
+    margin-top: 50px;
+    font-size: 50px;
+}
+.gd{
+    font-size: 40px;
+}
+.black{
+    color: red;
+}
+.imran{
+    text-align: center;
+    background-color: cadetblue;
+}
+.nazmul{
+    font-size: small;
+}
